# remagic

./: .buildinfo  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  ci.yml  greetings.yml  sphinx.yml
_sources/: api.rst.txt  usage.rst.txt
docker/: README.md
docs/: README.rst
docs/source/: conf.py  index.rst
remagic/: __init__.py  constants.py  constants.pyi  exceptions.py  interface.py  main.py  main.pyi  pattern.py  utils.py
tests/: test_compile.py  test_create.py  test_create_pattern.py  test_metadata.py  test_other_interface.py  test_pattern.py  test_refs.py
