[tool.poetry]
name = "remagic"
version = "0.1.1"
description = "Working with RegEx made easy!"
authors = ["Ificiana <ificiana@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7.2"
regex = "^2022.9.13"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
bumpversion = "^0.6.0"
pytest = "^7.1.2"
pylint = "^2.14.5"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"
pathlib2 = "^2.3.7"
scandir = "^1.10.0"
coveralls = "^3.3.1"
twine = "^4.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.3.2"
furo = "^2022.9.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
